@@ -1,4 +1,6 @@
 MD5 bd88a65c4405e658c75071358df012d4 metadata.xml 453
 MD5 faf9f4c3271ac3760b47b0295d2de17b ChangeLog 503
 MD5 a7743ad817a1401abcc003e62b5a4895 gip-1.0.0.1.ebuild 937
+MD5 1754fc782962f4e36a516be27d374176 gip-1.1.0.1.ebuild 750
 MD5 f60b5b5a5df13f2d18b926622b6fa5d3 files/digest-gip-1.0.0.1 62
+MD5 50552573e797b6ba0f31cb67a9cc72dc files/digest-gip-1.1.0.1 62
